--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
+    "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
