--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.19.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "react": "^19.0.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
